--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+haveged (1.7b-1) unstable; urgency=low
+
+  * New upstream version.
+  * Refer to the file with the actual GPL version in debian/copyright.
+
+ -- Jérémy Bobbio <lunar@debian.org>  Fri, 07 Jun 2013 12:00:31 +0200
+
 haveged (1.7a-1) unstable; urgency=low
 
   * New upstream version.
