--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+haveged (1.7b-2) unstable; urgency=low
+
+  * Add a patch to fix alignment issues on MIPS.
+
+ -- Jérémy Bobbio <lunar@debian.org>  Fri, 07 Jun 2013 23:19:42 +0200
+
 haveged (1.7b-1) unstable; urgency=low
 
   * New upstream version.
